sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:9: error: '(' expected but identifier found.
        if pludPetit(v, i-1) {
           ^